--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel='stylesheet' type='css' href='styles.css'>
+    <link rel='stylesheet' href='styles.css'>
+    <title>Watchout</title>
   </head>
   <body>
     <div class="scoreboard">
-      <!-- Modify the scoreboard when important events occur in your game! -->
-      <div class="highscore">High score: <span>0</span></div>
+      <div class="highScore">High score: <span>0</span></div>
       <div class="current">Current score: <span>0</span></div>
-      <div class="collisions">Collisions: <span>0</span></div>
+      <div class="collisions">Collision: <span>0</span></div>
     </div>
+
     <div class="board"><div class="mouse"></div></div>
     <script src="lib/d3.js" charset="utf-8"></script>
-    <script src='watchout.js'></script>
+    <script src="watchout.js"></script>
   </body>
 </html>
